[project]
name = "cloud-cli"
version = "0.1.0"
description = "Cloud CLI tools for AWS and GCP"
readme = "README.md"
authors = [
    {name = "Dmitri Babaev", email = "dmitri.babaev@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "boto>=2.4",
    "google-cloud-storage>=1.18",
    "requests",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pylint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]

[tool.pylint.format]
max-line-length = 120 

[project.scripts]
ec2-ansible = "ec2_ansible:main"
ec2-ssh-conf-sync = "ec2_ssh_config_sync:main"
ec2cmd = "ec2cmd:main"
gcs-cache = "gcs_cache:main"
http-cache = "http_cache:main"
s3cache = "s3cache:main"
cloud-ru-mls = "cloud_ru_mls:main"
