[project]
name = "cloud-cli"
version = "0.1.0"
description = "Cloud CLI tools for AWS and GCP"
readme = "README.md"
authors = [
    {name = "Dmitri Babaev", email = "dmitri.babaev@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "boto>=2.4",
    "google-cloud-storage>=1.18",
    "requests",
    "tabulate>=0.9.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pylint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]

[tool.pylint.format]
max-line-length = 120 

[project.scripts]
cloud-aws = "aws_cli:main"
cloud-cache = "cloud_cache:main"
cloud-ru-mls = "cloud_ru_mls:main"
